# nba-insights-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  linter.yaml
app/: app.py  configuration.py  constants.py  insights_app.py  llm.py  prompts.py
app/db/: connection.py  dao.py
app/logic/: ner_retrieval.py  question_to_sql.py  results_display.py
benchmark/: benchmark_ner_retrieval_pipeline.py  benchmark_request_to_sql.py
data/benchmark/results/: dataset_ner_retrieval_results.json  dataset_request_to_sql_results.json  dataset_request_to_sql_results_prompt_no_thinking.json  dataset_request_to_sql_results_prompt_thinking.json
data/benchmark/test_dataset/: dataset_ner_retrieval.json  dataset_request_to_sql.json
tests/: test_ner_retrieval.py  test_question_to_sql.py
