[project]
name = "nba-insights-engine"
version = "0.1.0"
description = "Answer user questions by querying a NBA SQL database using LLMs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
preview = true
extend-select = [
    'E', 'F', 'W', 'C90', 'A', 'ANN', 'S', 'B', 'PT', 'Q', 'RSE', 'SIM', 'ARG', 'PTH', 'PD',
    'TRY', 'FLY', 'NPY', 'PLC', 'PLE', 'PLW', 'I',
    ]
