[project]
name = "nba-insights-engine"
version = "0.1.0"
description = "Answer user questions by querying a NBA SQL database using LLMs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.0",
    "numpy>=2.2.3",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.0",
    "pydantic>=2.10.6",
    "streamlit>=1.42.2",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
preview = true
extend-select = [
    'E', 'F', 'W', 'C90', 'A', 'ANN', 'S', 'B', 'PT', 'Q', 'RSE', 'SIM', 'ARG', 'PTH', 'PD',
    'TRY', 'FLY', 'NPY', 'PLC', 'PLE', 'PLW', 'I',
    ]

ignore = ['S608', 'ANN401']
